# hkust-hpc

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIB.rst  CONTRIBUTING.md  Makefile  README.md  README.rst  pyproject.toml
.githooks/: pre-commit
.github/workflows/: docs.yml
Makefile.inc/: build.mk
Makefile.inc/dev/: debug-targets.mk  env.mk  kb-rename.mk
docs/: requirements.txt
docs/source/: conf.py  index.rst  migration-from-hpc3.rst
docs/source/_static/css/: kb.css
docs/source/kb/: .template.rst  index.rst
docs/source/kb/apps/: apps-gromacs-000001.rst  apps-running-gromacs-on-hpc-systems-bxKp.rst
docs/source/kb/linux/: index.rst  linux-how-to-efficiently-remove-large--b9Cd.rst
docs/source/kb/slurm/: index.rst  slurm-how-to-run-jupyterlab-on-hpc-com-iVhT.rst  slurm000001.rst  slurm000002.rst  slurm000003.rst
docs/source/kb/spack/: index.rst  spack-how-can-i-share-spack-compiled-p-sCqd.rst  spack-how-to-speed-up-spack-package-in-L7vb.rst  spack-when-using-spack-generated-modul-_m_g.rst  spack000001.rst  spack000002.rst  spack000003.rst
docs/source/kb/ssh/: index.rst  ssh-how-to-enable-x11-forwarding-for-6oOi.rst  ssh000001.rst  ssh000002.rst  ssh000003.rst
docs/source/kb/vscode/: vscode-how-to-reset-vs-code-remote-conn-BcHN.rst
docs/source/migration-from-hpc3/: index.rst
docs/source/quick-start/hpc4/: c.rst  python.rst
docs/source/slurm/: index.rst
docs/source/slurm/quick-start/: index.rst
docs/source/slurm/user-doc/: index.rst  reference.rst
docs/src/: conf.py  examples  index.rst
docs/src/_static/: custom.css
docs/src/benchmarks/: index.rst  multi-node.rst  single-node.rst
docs/src/compile-guides/: esmf.rst  index.rst  libxc.rst  wrf.rst
docs/src/contrib/: github-vscode-integration.rst  index.rst
docs/src/kb/: index.rst  template.rst
docs/src/kb/apps/: apps-running-gromacs-on-hpc-systems-2xQqw0.rst  index.rst
docs/src/kb/dev/: dev-how-to-debug-segmentation-fault---d8CWH.rst  index.rst
docs/src/kb/enroot/: enroot-error-when-downloading-nvidia-ng-k1c4Rs.rst  enroot-running-container-in-batch-mode--Ha3k6x.rst  enroot-running-interactive-container-se-L58_Wq.rst  enroot-saving-enroot-container-failed-tdQCrl.rst  index.rst
docs/src/kb/git/: git-cloning-github-with-vs-code-CYZGB9.rst  git-installing-github-copilot-in-vs--Fwt__7.rst  git-setting-up-git-and-github-UFSWbB.rst  github-copilot-vscode.rst  github-vscode-integration.rst  how-to-make-a-pull-request.rst  how-to-make-a-pull-request_git.rst  index.rst
docs/src/kb/linux/: linux--setenv--command-not-found--when-MpUylV.rst  linux-how-to-efficiently-download-file-kAXs5k.rst  linux-how-to-efficiently-list-all-file-VyC188.rst  linux-how-to-efficiently-remove-large--xY2yHF.rst  linux-how-to-efficiently-upload-files--QGfkr7.rst  linux-how-to-locate-files-and-folders--ViIp-5.rst
docs/src/quick-start/: access-and-authentication.rst  data-and-storage.rst  first-job-template.rst  index.rst  job-submission.rst  software-environment.rst
docs/src/software/: index.rst  software-support-overview.rst
docs/src/sysadmin/: hardware-overview.rst  index.rst  k8s-hpc.rst  known-issues.rst  numa-optimizations.rst  other-topics.rst  software-ecosystem.rst  system-config.rst  testing-tracing.rst  testing.rst  upstream-issues.rst
examples/: index.rst
examples/cross-node-dl-slurm-script/: README.md  index.rst  submit-line.sh  train-redpajama-launcher.sh  train-redpajama-prelaunch.sh
examples/data-acquisition-huggingface/: hf_model_download.py  index.rst  slurm-hf-model-download.sh
examples/data-acquisition-urllist/: index.rst  slurm-url-list-download.sh  url-list.txt
examples/debug-segmentation-fault/: Makefile  README.md  index.rst
examples/debug-segmentation-fault/src/: constants.c  constants.h  main.c  mpi_impl.c  mpi_impl.h  util.c  util.h
examples/hpc4-hello-world/: README.md  hpc4-batch-job-helloworld-cpu-mpi.sh  hpc4-batch-job-helloworld-cpu.sh  hpc4-batch-job-helloworld-gpu.sh  hpc4-interactive-helloworld.sh
examples/superpod-hello-world/: README.md  index.rst  superpod-batch-job-helloworld.sh  superpod-interactive-helloworld.sh
external-resources/drupal/hpc4/: HPC4 - Apptainer (Singularity) _ Information Technology Services Office.html  HPC4 - HOW TO LOGIN _ Information Technology Services Office.html  HPC4 - SUBMIT YOUR FIRST SLURM JOB _ Information Technology Services Office.html  HPC4 - USE OF SLURM JOB SCHEDULING SYSTEM _ Information Technology Services Office.html  HPC4 Cluster _ Information Technology Services Office.html  HPC4 SOFTWARE MODULE SYSTEM _ Information Technology Services Office.html  Slurm Partitions, QoS and Resource Limits _ Information Technology Services Office.html  Storage Types _ Information Technology Services Office.html  USE OF Spack _ Information Technology Services Office.html  VSCode on compute node with Remote Tunneling extension _ Information Technology Services Office.html
external-resources/drupal/spod/: HKUST SuperPOD Hardware - Specification _ Information Technology Services Office.html  HKUST SuperPOD _ Information Technology Services Office.html  Submit your first Slurm job _ Information Technology Services Office.html
external-resources/welcome-email/: index.html
scripts/: bash-functions.sh
templates/: template.rst
workshops/: README.md
workshops/20241119-scaling-dl-pipeline/: README.md
(+68 files in other folders)
