[project]
name = "hkust-hpc"
version = "1.0.0"
description = "Tutorials, docs and knowledge base for AI / HPC users at HKUST"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "sphinx~=8.2.3",
    "sphinx-copybutton~=0.5.2",
    "sphinx-design~=0.6.1",
    "sphinx-rtd-theme~=3.0.2",
]
license = {text = "MIT"}
authors = [
    { name = "K. F. Tse", email = "kftse@ust.hk" },
    { name = "C. H. Tai", email = "chtaihei@ust.hk" },
]

[dependency-groups]
docs = [
    "doc8>=2.0.0",
    "rstcheck[sphinx,toml]>=6.2.5",
]
dev = [
    { include-group = "docs" },
    "esbonio>=0.16.5",
    "pre-commit>=4.3.0",
    "ruff>=0.13.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.doc8]
# D001 (line-too-long) is not enforced: RST has no auto-formatter to fix it,
# and source line length has zero impact on rendered HTML output.
ignore = ["D001"]

[tool.rstcheck]
report_level = "warning"
ignore_directives = [
    "card",
    "dropdown",
    "grid",
    "grid-item-card",
    "tab-set",
    "tab-item",
]
ignore_roles = [
    "strike",
]
