[project]
name = "hkust-hpc"
version = "1.0.0"
description = "Tutorials, docs and knowledge base for AI / HPC users at HKUST"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "sphinx~=8.2.3",
    "sphinx-copybutton~=0.5.2",
    "sphinx-design~=0.6.1",
    "sphinx-rtd-theme~=3.0.2",
]
license = {text = "MIT"}
authors = [
    { name = "K. F. Tse", email = "kftse@ust.hk" },
    { name = "C. H. Tai", email = "chtaihei@ust.hk" },
]

[dependency-groups]
docs = [
    "doc8>=2.0.0",
    "rstcheck[sphinx,toml]>=6.2.5",
]
dev = [
    { include-group = "docs" },
    "esbonio>=0.16.5",
    "pre-commit>=4.3.0",
    "ruff>=0.13.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.doc8]
# D001 (line-too-long) is not enforced: RST has no auto-formatter to fix it,
# and source line length has zero impact on rendered HTML output.
# D003 (TabIndentation) is ignored because Makefile code blocks require literal tabs.
ignore = ["D001", "D003"]

[tool.rstcheck]
report_level = "warning"
ignore_directives = [
    # sphinx-design directives (unknown to rstcheck)
    "card",
    "dropdown",
    "grid",
    "grid-item-card",
    "tab-set",
    "tab-item",
    # code-block content validation is skipped: rstcheck produces false
    # positives for Helm templates, bash placeholders (<name>), C headers,
    # and code-block directives without an explicit language specifier.
    # Sphinx renders all of these correctly; only RST structure is checked.
    "code-block",
    "literalinclude",
]
ignore_roles = [
    "strike",
]
ignore_messages = ["Duplicate implicit target name"]
